# rust-matrix-bot

./: Cargo.toml  Dockerfile  README.md  config.example.toml
src/: Cargo.toml  bot.rs  config.rs  main.rs  matrix.rs
