[package]
name = "rust-matrix-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "1.2"
ruma = { version = "0.9.4", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
