[package]
name = "rust-matrix-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ruma = { version = "0.9.4", features = [
    "client",
    "client-api",
    "client-api-c",
    "client-ext-client-api",
    "events",
] }
hyper = "1.2"
hyper-tls = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
